<resources>
    <string name="app_name">ToDo</string>
    <string name="underEmail">E-mail</string>
    <string name="underPassword">Password</string>
    <string name="forgetPass"><u>forget your password?</u></string>
    <string name="activeAcc"><u>back to login?</u></string>
    <string name="create"><u>SIGN UP</u></string>
    <string name="invalid_email">E-mail invalido</string>
    <string name="invalid_password">Contraseña invalida</string>
</resources>